# daily-report-app

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/: settings.json
.claude/hooks/: prevent-npm.py
.github/workflows/: release.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: collector-spec.md  index.md  storage-spec.md
.trellis/tasks/07-10-sqlite-storage/: implement.md  task.json
.trellis/tasks/archive/2026-07/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-07/07-09-collect-conversations/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-09-daily-report-app/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-10-collect-path-filter/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-10-sqlite-storage/: design.md  prd.md  task.json
.trellis/workspace/cyy/: index.md  journal-1.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db.rs  export.rs  lib.rs  llm.rs  main.rs
src-tauri/src/collector/: claude_code.rs  mod.rs
src/lib/: bindings.ts  markdown.test.ts  markdown.ts  store.ts  template.test.ts  template.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/history/: +page.svelte
src/routes/settings/: +page.svelte
